deploy/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flagpole-api
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flagpole-consumer
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flagpole-web
spec:
  replicas: 2
